# openlat

./: AUTHORS  LICENSE  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am
src/include/openlat/: approx-shortest-distance.h  approx-shortest-path.h  compat.h  confusion-network.h  constrain.h  edit-distance.h  htk-compiler.h  htk-printer.h  interactive-sequence-labeling.h  iofilter.h  normalize.h  path-count.h  query.h  rmarc.h  rmprefix.h  search-path.h  split-symbols.h  thot-compiler.h  thot-printer.h  utils.h  vector-weight.h  verify.h
src/lib/: Makefile.am  bz2stream.hpp  extra_typemaps.i  htk-compiler.cpp  htk.h  htk.l  htk.y  iofilter.cpp  openlat.i  parser-utils.h  sigsegv.cpp  thot-compiler.cpp
src/lib/htk/: htk.h  htk.l  htk.y
src/lib/thot/: thot.h  thot.l  thot.y
src/test/: Makefile.am  test-file.cpp  test-htk.cpp  test-normalize.cpp  test-query.cpp  test-sequence-labeling.cpp
